(FIX) : corrected paragraph alignment in body content bottom half

--- a/css/index.css
+++ b/css/index.css
@@ -165,9 +165,12 @@ body {
     display: block;
   }
 }
+.page-header {
+  width: 100vw;
+}
 .navigation-container {
   position: fixed;
-  width: 100%;
+  width: 100vw;
   margin: 0 auto;
   background-color: #99A4AF;
   z-index: 10;
@@ -194,7 +197,8 @@ a:visited {
   align-items: center;
   height: 50px;
   max-width: 1024px;
-  margin: 0 auto;
+  margin-left: 5%;
+  margin-right: 5%;
   font-size: 2.4rem;
   color: #FFFFFF;
   width: 75%;
@@ -227,10 +231,14 @@ a:visited {
 .hero-image-container .hero-image-text {
   height: 100%;
   margin-left: 10%;
-  height: 260px;
-  width: 80%;
 }
-.hero-image-container h1 {
+@media (max-width: 400px) {
+  .hero-image-container .hero-image-text {
+    height: 260px;
+    width: 80%;
+  }
+}
+.hero-image-container .hero-image-text h1 {
   font-weight: bold;
   font-size: 6.4rem;
   line-height: 7.5rem;
@@ -240,7 +248,7 @@ a:visited {
   top: 330px;
 }
 @media (max-width: 400px) {
-  .hero-image-container h1 {
+  .hero-image-container .hero-image-text h1 {
     line-height: 5rem;
     font-size: 4rem;
     top: 140px;
@@ -329,8 +337,8 @@ a:visited {
   margin-left: 25px;
 }
 .body-content-bottom-half {
-  margin: 0 auto;
-  width: 100%;
+  margin: 0 5%;
+  width: 90%;
 }
 .body-content-bottom-half img {
   width: 100%;
@@ -359,6 +367,10 @@ a:visited {
   right: 0;
   bottom: -30px;
 }
+.body-content-bottom-half .header-image-with-description-box-right .header-text {
+  width: 50%;
+  margin-bottom: 50px;
+}
 .body-content-bottom-half .header-image-with-description-box-left {
   position: relative;
 }
@@ -378,9 +390,11 @@ a:visited {
 }
 .body-content-bottom-half .header-text {
   margin: 95px 200px;
+  width: 50%;
 }
 .body-content-bottom-half .header-text p {
   font-size: 1.8rem;
+  margin-top: 40px;
   margin-bottom: 20px;
 }
 footer {
