--- a/less/home.less
+++ b/less/home.less
@@ -8,37 +8,38 @@
     height: 300px;
   }
 
-   .desktop-image {
-     display: block;
+  .desktop-image {
+    display: block;
 
-     @media (max-width: 400px) {
-       width: 100%;
-       height: 300px;
-       padding: 0;
-       margin: 0;
-     }
-   }
+    @media (max-width: 400px) {
+      width: 100%;
+      height: 300px;
+      padding: 0;
+      margin: 0;
+    }
+  }
 
   .hero-image-text {
     height: 100%;
     margin-left: 10%;
 
     @media (max-width: 400px) {
-    height: 260px;
-    width: 80%;
-  }
+      height: 260px;
+      width: 80%;
+    }
 
-  h1 {
-    .jumbotron-text-style;
-    font-family: Roboto, Sans-Serif;
-    position: absolute;
-    top: 330px;
+    h1 {
+      .jumbotron-text-style;
+      font-family: Roboto, Sans-Serif;
+      position: absolute;
+      top: 330px;
 
-    @media (max-width: 400px) {
-      line-height: 5rem;
-      font-size: 4rem;
-      top: 140px;
-      left: 5%;
+      @media (max-width: 400px) {
+        line-height: 5rem;
+        font-size: 4rem;
+        top: 140px;
+        left: 5%;
+      }
     }
   }
 }
@@ -126,8 +127,8 @@
   }
 }
   .body-content-bottom-half {
-    margin: 0 auto;
-    width: 100%;
+    margin: 0 5%;
+    width: 90%;
 
     img {
       width: 100%;
@@ -148,6 +149,11 @@
         right: 0;
         bottom: -30px;
       }
+
+      .header-text {
+        width: 50%;
+        margin-bottom: 50px;
+      }
     }
 
     .header-image-with-description-box-left {
@@ -160,14 +166,15 @@
         bottom: -30px;
       }
     }
-    .header-text {
-      margin: 95px 200px;
+      .header-text {
+        margin: 95px 200px;
+        width: 50%;
 
-      p {
-        font-size: 1.8rem;
-        margin-bottom: 20px;
-      }
-    }
+        p {
+          font-size: 1.8rem;
+          margin-top: 40px;
+          margin-bottom: 20px;
+            }
+        }
   }
-
 
