--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,9 +1,6 @@
-.page-header {
-  width: 100vw;
-}
   .navigation-container {
     position: fixed;
-    width: 100vw;
+    width: 100%;
     margin: 0 auto;
     background-color: @navigation-bar-background-color;
     z-index: 10;
